samples/_failures_safe/1761089601_9eb9ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab27af36.c: In function ‘process_data’:
./samples/SAFE/__tmp_ab27af36.c:187:16: error: missing terminating " character
  187 |         printf("Reached maximum processing limit\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ab27af36.c:187:9: error: expected expression at end of input
  187 |         printf("Reached maximum processing limit\n
      |         ^~~~~~
./samples/SAFE/__tmp_ab27af36.c:187:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ab27af36.c:187:9: error: expected declaration or statement at end of input
